feat: 1) add UpdateUser endpoint 2) add settings page for cabinet 3) add change user info, change password and delete account 4) add logout to cabinet
